Added content for intro topic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="nav_header_subtitle">joenyugoh@gmail.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="introduction_to_android">Introduction To Android</string>
+    <string name="intro_text">To add an EditText to the TextInputLayout, switch to the layout editor’s Text view, then change the TextInputLayout element’s closing to , position the cursor to the right of the , press Enter and type . The IDE will auto-complete the closing tag. Between the TextInputLayout’s starting and ending tags, type EditText. The IDE will show an auto-complete window with EditText selected. Press Enter to insert an EditText, then set its layout_width to match_parent and layout_height to wrap_content. In Design view, set the EditText’s id to locationEditText, check its singleLine property’s checkbox and set its hint property to the String resource hint_text</string>
 </resources>
